# haskellbook-exercises

./: .gitignore  Readme.md
chapter10/: db.hs  fibs.hs  fold.md  myOps.hs  warmup.hs
chapter11/: asPatterns.hs  binaryTree.hs  cipher.hs  convert.hs  hutton.hs  phone.hs  programmers.hs  quad.hs  tooMany.hs  vehicles.hs
chapter12/: binaryTree.hs  either.hs  maybe.hs  natural.hs  string.hs  unfolds.hs  validateWord.hs
chapter13/: Cipher.hs  caesar.hs  gimmePerson.hs  palindrome.hs  vigenere.hs
chapter13/hangman/: hangman.cabal
chapter13/hangman/.stack-work/install/x86_64-osx/lts-12.7/8.4.3/flag-cache/: hangman-0.1.0.0  random-1.1-9LLJAJa4iQFLJiLXBOBXBV  split-0.2.3.3-3fFb67BrTpqAjKImK4FBjR
chapter13/hangman/src/: Main.hs
chapter14/addition/: Addition.hs  addition.cabal
chapter14/addition/.stack-work/install/x86_64-osx/lts-12.7/8.4.3/flag-cache/: HUnit-1.6.0.0-JrvWwD5n0JVL2qYKQOHt3C  QuickCheck-2.11.3-3XHQpBYb83U2mMvNz2AjQX  addition-0.1.0.0-1CYYWsst1XqEfY50rEvrNI  addition-0.1.0.0-5ORVMOZiVp1J8aBw3Pdt6x  ansi-terminal-0.8.0.4-JygoK7BZB5m4K6OxT2muhl  call-stack-0.1.0-Eiz5FM8yQXpI3vyQ1Rt4Jq  clock-0.7.2-Cf9UTsaN2AjEpBnoMpmgkU  colour-2.3.4-C3PVIHDZkyCIpOJGl3M0hE  hspec-2.5.5-SzKEWwrCRULYgiNkzfVAt  hspec-core-2.5.5-JwPinmRC772ITk3TqGnfUD  hspec-discover-2.5.5-3lbzfYKyCX74uo24qYYO8u  hspec-expectations-0.8.2-7lpBAWb1yuYLnEELJ6wtYs  primitive-0.6.3.0-DaZpcxwJp2TGn8ITSgfI4C  quickcheck-io-0.2.0-EkaMZi89NOa4JiMdRU98Zc  setenv-0.1.1.3-H1xmIqlPy4yIDquO6eJhBl  tf-random-0.5-BZa4jMFCdGCK8yjkzN18lQ
chapter14/addition/.stack-work/install/x86_64-osx/lts-12.7/8.4.3/lib/x86_64-osx-ghc-8.4.3/: libHSaddition-0.1.0.0-1CYYWsst1XqEfY50rEvrNI-ghc8.4.3.dylib
chapter14/addition/.stack-work/install/x86_64-osx/lts-12.7/8.4.3/lib/x86_64-osx-ghc-8.4.3/addition-0.1.0.0-1CYYWsst1XqEfY50rEvrNI/: Addition.dyn_hi  Addition.hi
chapter14/addition/.stack-work/install/x86_64-osx/lts-12.7/8.4.3/pkgdb/: addition-0.1.0.0-1CYYWsst1XqEfY50rEvrNI.conf  package.cache
chapter14/morse/: morse.cabal
chapter14/morse/.stack-work/install/x86_64-osx/lts-12.7/8.4.3/flag-cache/: morse-0.1.0.0-4u16HIsPnFzJFl1Cyn47g9
chapter14/morse/.stack-work/install/x86_64-osx/lts-12.7/8.4.3/lib/x86_64-osx-ghc-8.4.3/: libHSmorse-0.1.0.0-4u16HIsPnFzJFl1Cyn47g9-ghc8.4.3.dylib
chapter14/morse/.stack-work/install/x86_64-osx/lts-12.7/8.4.3/pkgdb/: morse-0.1.0.0-4u16HIsPnFzJFl1Cyn47g9.conf  package.cache
chapter14/morse/src/: Main.hs  Morse.hs
chapter14/morse/tests/: tests.hs
chapter14/tests/: Addition.hs  QuickCheckTests.hs  WordNumber.hs  WordNumberTest.hs  addition.cabal
chapter15/: Laws.hs  MonoidExercises.hs  OptionalExercises.hs  SemigroupExercises.hs  exercises.cabal  exercises.hs  madlibs.hs  optional.cabal  optional.hs  tests.hs
chapter15/.stack-work/install/x86_64-osx/lts-12.9/8.4.3/flag-cache/: QuickCheck-2.11.3-3XHQpBYb83U2mMvNz2AjQX  exercises-0.1.0.0  optional-0.1.0.0  primitive-0.6.3.0-DaZpcxwJp2TGn8ITSgfI4C  random-1.1-9LLJAJa4iQFLJiLXBOBXBV  tf-random-0.5-BZa4jMFCdGCK8yjkzN18lQ
chapter15/.stack-work/install/x86_64-osx/lts-12.9/8.4.3/pkgdb/: package.cache
chapter15/orphan-instance/: Listy.hs  ListyInstances.hs
chapter16/: ChapterExercises.hs  FunctorExercises.hs  Laws.hs  chapter16.cabal  heavylifting.hs  possibly.hs  sum.hs  tests.hs
chapter16/.stack-work/install/x86_64-osx/lts-12.9/8.4.3/flag-cache/: chapter16-0.1.0.0-5XgB7WzA3TFGiEioj7RtiQ
chapter16/.stack-work/install/x86_64-osx/lts-12.9/8.4.3/lib/x86_64-osx-ghc-8.4.3/chapter16-0.1.0.0-5XgB7WzA3TFGiEioj7RtiQ/: ChapterExercises.dyn_hi  ChapterExercises.hi  FunctorExercises.dyn_hi  Laws.hi  Possibly.dyn_hi  Possibly.hi  Sum.dyn_hi
chapter16/.stack-work/install/x86_64-osx/lts-12.9/8.4.3/pkgdb/: chapter16-0.1.0.0-5XgB7WzA3TFGiEioj7RtiQ.conf  package.cache
chapter17/: ChapterExercises.hs  List.hs  Validation.hs  chapter17.cabal  constant.hs  fixerupper.hs  identity.hs  lookups.hs
chapter18/: ChapterExercises.hs  bind.hs  chapter18.cabal  either.hs
chapter2/: FunctionWithLet.hs  FunctionWithWhere.hs  learn.hs  practice.hs  test.hs  waxon.hs
chapter20/: exercises.hs  library.hs
chapter21/: ChapterExercises.hs  chapter21.cabal
chapter22/: exercises.hs  readingComp.hs  warmUp.hs
chapter22/shawty-prime/app/: Main.hs
chapter23/: ChapterExercises.hs  FizzbuzzFromTo.hs  RandomExample.hs  chapter23.cabal
chapter24/: BT.hs  Fractions.hs  LearnParsers.hs  Marshalling.hs  chapter24.cabal
chapter24/ChapterExercises/: SemVer.hs
chapter24/Data/: Ini.hs
chapter24/Text/: Fractions.hs
chapter25/: Bifunctor.hs  Twinplicative.hs  chapter25.cabal
chapter26/: ChapterExercises.hs  EitherT.hs  HitCounter.hs  MaybeT.hs  Morra.hs  OuterInner.hs  ReaderT.hs  StateT.hs
chapter27/: Bottom.hs  StrictList.hs
chapter28/: .gitignore  benchIndex.hs  dList.hs  loci.hs  mapSet.hs  profilingTime.hs  queue.hs
chapter29/cipher/: Vigenere.hs  cipher.cabal  encrypted.txt
chapter29/config/: Config.hs  config.cabal
chapter29/config/example/: config.ini  ignoreme
chapter3/: TopOrLocal.hs  functions.hs  print2.hs  print3.hs  print3broken.hs  print3flipped.hs  reverse.hs
chapter31/fingerd/: finger.db  fingerd.cabal
chapter31/fingerd/src/: Debug.hs  Main.hs
chapter4/: abs.hs  f.hs  greetIfCool1.hs  greetIfCool2.hs  palindrome.hs
chapter5/: addStuff.hs  arith3broken.hs  sing.hs  subtractStuff.hs  typewondo.hs
chapter6/: dayofweek.hs  eq.hs  trivial.hs
chapter7/: abacbc.hs  addOne.hs  arith2.hs  arith4.hs  artfuldodgy.hs  employee.hs  foldBool.hs  functionC.hs  guardDuty.hs  ifEvenAdd2.hs  myAbs.hs  nums.hs  penguins.hs  registeredUser1.hs  registeredUser2.hs  tensDigit.hs  varietypack.hs
chapter8/: cattyConny.hs  dividedBy.hs  mcCarthy.hs  recursiveMult.hs  sumToN.hs  wordnumber.hs
chapter9/: char.hs  cipher.hs  enumFromTo.hs  filter.hs  myOps.hs  myWords.hs  negate3.hs  poemLines.hs  splitString.hs  squareCube.hs  zip.hs
(+3 files in other folders)
