name:                exercises
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
library
  other-modules:
      Laws
  ghc-options:
      -Wall -fwarn-tabs
  hs-source-dirs:
      .
  build-depends:
      base >=4.7 && <5
    , containers
    , QuickCheck
  default-language: Haskell2010

test-suite optional
  type: exitcode-stdio-1.0
  main-is: optional.hs
  hs-source-dirs:
      .
  ghc-options:
      -Wall -fno-warn-orphans
  build-depends:
      base >=4.7 && <5
    , QuickCheck
  default-language: Haskell2010

test-suite SemigroupExercises
  type: exitcode-stdio-1.0
  main-is: SemigroupExercises.hs
  hs-source-dirs:
      .
  ghc-options:
      -Wall -fno-warn-orphans
  build-depends:
      base >=4.7 && <5
    , QuickCheck
  default-language: Haskell2010