name:                optional
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

test-suite optional
  type: exitcode-stdio-1.0
  main-is: optional.hs
  hs-source-dirs:
      .
  ghc-options:
      -Wall -fno-warn-orphans
  build-depends:
      base >=4.7 && <5
    , QuickCheck
  default-language: Haskell2010