name:                chapter16
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
library
  other-modules:
      Laws,
      FunctorExercises
  ghc-options:
      -Wall -fwarn-tabs
  hs-source-dirs:
      .
  build-depends:
      base >=4.7 && <5
    , containers
    , QuickCheck
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: tests.hs
  hs-source-dirs:
      .
  ghc-options:
      -Wall -fno-warn-orphans
  build-depends:
      base >=4.7 && <5
    , QuickCheck
  default-language: Haskell2010