name:                chapter21
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable ch21ex
  main-is: ChapterExercises.hs
  ghc-options:  -main-is ChapterExercises
  hs-source-dirs:
      .
  build-depends:
      base >=4.7 && <5
    , QuickCheck
    , checkers
  default-language: Haskell2010