name:                chapter23
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable random
  main-is: RandomExample.hs
  ghc-options:  -main-is RandomExample
  hs-source-dirs:
      .
  build-depends:
      base >=4.7 && <5
    , random
    , transformers
  default-language: Haskell2010

executable fizzbuzz
  main-is: FizzbuzzFromTo.hs
  ghc-options:  -main-is FizzbuzzFromTo
  hs-source-dirs:
      .
  build-depends:
      base >=4.7 && <5
    , transformers
  default-language: Haskell2010

executable ch23ex
  main-is: ChapterExercises.hs
  ghc-options:  -main-is ChapterExercises
  hs-source-dirs:
      .
  build-depends:
      base >=4.7 && <5
    , transformers
  default-language: Haskell2010