name:                chapter24
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Data.Ini
  other-modules:
    LearnParsers,
    Fractions
  ghc-options:
      -Wall -fwarn-tabs
  hs-source-dirs:
      .
  build-depends:
      base >=4.7 && <5
      , containers
      , bytestring
      , text
      , trifecta
      , parsers
      , hspec
      , raw-strings-qq
      , attoparsec
      , parsec
      , aeson
      , scientific
  default-language: Haskell2010