name:                chapter25
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable parsers
  main-is: LearnParsers.hs
  ghc-options:  -main-is LearnParsers
  hs-source-dirs:
      .
  build-depends:
      base >=4.7 && <5
    , trifecta
    , parsers
  default-language: Haskell2010