name:                cipher
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Cipher
  ghc-options:
      -Wall -fwarn-tabs
  hs-source-dirs:
      ../../chapter13
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010


executable cipher
  main-is: Vigenere.hs
  ghc-options:  -main-is Vigenere
  hs-source-dirs:
      .
  build-depends:
      base >=4.7 && <5,
      cipher
  default-language: Haskell2010