name:                config
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Data.Ini
  ghc-options:
      -Wall -fwarn-tabs
  hs-source-dirs:
      ../../chapter24
  build-depends:
      base >=4.7 && <5
      , containers
      , bytestring
      , text
      , trifecta
      , hspec
      , raw-strings-qq
  default-language: Haskell2010

executable config
  main-is: Config.hs
  ghc-options:  -main-is Config
  hs-source-dirs:
      .
  build-depends:
      base >=4.7 && <5,
      config,
      directory, 
      trifecta,
      bytestring
  default-language: Haskell2010